Update project to support Java 8